--- a/menu.html
+++ b/menu.html
@@ -80,8 +80,18 @@
                         <p>$4.60</p>
                     </div>     
                 </div>
+                <div class="menu__prices--cards">
+                    <div class="card__menu">
+                        <h3>title</h3>
+                        <p>description</p>
+                    </div>             
+                    <div class="card__price">
+                        <p>$4.60</p>
+                    </div>     
+                </div>
                 
             </div>
+            
         </div>
     </section>
 </body>
