plantilla casi terminada 80%

--- a/cards.html
+++ b/cards.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <section class="cards__container">
-        <div class="card__imgl"><img src="./assets/img/w-left-techture.png" alt=""></div>
+        <div class="card__imgl">
+            <img src="./assets/img/w-left-techture.png" alt="">
+        </div>
         <div class="container__cards">
             <div class="cards__titles">
                 <h2>Productos destacados </h2>
