--- a/navbar.html
+++ b/navbar.html
@@ -26,12 +26,17 @@
         </div>
 
 
-        <div class="navbar_navegationContainer">
+        <div class="navbar__navegationContainer">
             <div class="navbar__logo">
-                <!-- <img src="./assets/img/logo.png" alt=""> -->
+                <a href="">
+                    <img src="./assets/img/logo.png" alt=""> 
+                </a>
+                
             </div>
-            <nav>
-                <ul>
+
+
+            <nav class="navabr__menu">
+                <ul class="navbr__menu--grid">
                     <li><a href="">Inicio</a></li>
                     <li><a href="">Nuestros Pasteles</a></li>
                     <li><a href="">Menu</a></li>
@@ -39,6 +44,7 @@
                     <li><a href="">Contacto</a></li>
                 </ul>
             </nav>
+
         </div>
     
     </header>
