ya se complico todo aun faltan puntos para la plantilla

--- a/plantilla/servicios.html
+++ b/plantilla/servicios.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="services__container--main">
+    <section class="services__container--main">
     
         <div class="services__container--cards">
             <div class="services__container--tittle">
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     
 </body>
 </html>
